--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jquery": "^3.6.1",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
+    "react-bootstrap-icons": "^1.9.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.4.1",
