--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.2",
+    "framer-motion": "^7.6.6",
     "jquery": "^3.6.1",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
