--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "untitled",
+  "name": "mediation-web",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://pizgo.github.io/mediation-web",
   "dependencies": {
     "@sanity/client": "^3.4.1",
     "@testing-library/jest-dom": "^5.16.5",
@@ -24,7 +25,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -43,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
