--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "bootstrap": "^5.2.2",
     "framer-motion": "^7.6.6",
     "jquery": "^3.6.1",
-    "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.9.1",
     "react-dom": "^18.2.0",
@@ -20,6 +19,7 @@
     "react-intersection-observer": "^9.4.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "sass": "^1.56.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
